--- a/RegristroArticulos/Properties/Resources.resx
+++ b/RegristroArticulos/Properties/Resources.resx
@@ -124,10 +124,13 @@
   <data name="diskette_save_saveas_1514" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\diskette_save_saveas_1514.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="abort-146072_640" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\abort-146072_640.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Edit_icon_(the_Noun_Project_30184).svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Edit_icon_(the_Noun_Project_30184).svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="abort-146072_640" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\abort-146072_640.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="magnifying-glass-1976105_960_720" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\magnifying-glass-1976105_960_720.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
